# openapi/management-open-api.yaml
@@ -10,7 +10,7 @@ paths:
   /management/v1/project:
     get:
       tags:
-      - management
+      - warehouse
       summary: List all projects the requesting user has access to
       operationId: list_projects
       responses:
@@ -24,7 +24,7 @@ paths:
                   $ref: '#/components/schemas/ListProjectsResponse'
     post:
       tags:
-      - management
+      - project
       summary: Create a new project
       operationId: create_project
       requestBody:
@@ -42,11 +42,11 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/ProjectResponse'
+                  $ref: '#/components/schemas/CreateProjectResponse'
   /management/v1/project/{project_id}:
     get:
       tags:
-      - management
+      - project
       summary: Get a Project by ID
       operationId: get_project
       parameters:
@@ -67,7 +67,7 @@ paths:
                   $ref: '#/components/schemas/GetProjectResponse'
     delete:
       tags:
-      - management
+      - project
       summary: Delete a project by ID
       description: No warehouses must be present in the project to delete it.
       operationId: delete_project
@@ -84,7 +84,7 @@ paths:
   /management/v1/project/{project_id}/rename:
     post:
       tags:
-      - management
+      - project
       summary: Rename a project
       operationId: rename_project
       parameters:
@@ -104,17 +104,142 @@ paths:
       responses:
         '200':
           description: Project renamed successfully
+  /management/v1/search/user:
+    post:
+      tags:
+      - user
+      summary: Search for users (Fuzzy)
+      operationId: search_user
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SearchUserRequest'
+        required: true
+      responses:
+        '200':
+          description: List of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/SearchUserResponse'
+  /management/v1/user:
+    get:
+      tags:
+      - user
+      summary: List users
+      operationId: list_user
+      parameters:
+      - name: name
+        in: query
+        description: Search for a specific username
+        required: false
+        schema:
+          type: string
+          nullable: true
+      - name: pageToken
+        in: query
+        description: Next page token
+        required: false
+        schema:
+          $ref: '#/components/schemas/PageToken'
+      - name: pageSize
+        in: query
+        description: Signals an upper bound of the number of results that a client will receive.
+        required: false
+        schema:
+          type: integer
+          format: int32
+          nullable: true
+      responses:
+        '200':
+          description: List of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ListUsersResponse'
+  /management/v1/user/from-token:
+    post:
+      tags:
+      - user
+      summary: Creates the user in the catalog if it does not exist.
+      description: |-
+        If the user exists, it updates the users' metadata from the token.
+        The token sent to this endpoint should have "profile" and "email" scopes.
+      operationId: create_or_update_user_from_token
+      responses:
+        '200':
+          description: User updated
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+        '201':
+          description: User created
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+  /management/v1/user/{id}:
+    get:
+      tags:
+      - user
+      summary: Get a user by ID
+      operationId: get_user
+      responses:
+        '200':
+          description: User details
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+    put:
+      tags:
+      - user
+      summary: Update details of a user. Replaces the current details with the new details.
+      description: If a field is not provided, it is set to `None`.
+      operationId: update_user
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateUserRequest'
+        required: true
+      responses:
+        '200':
+          description: User details updated successfully
+    delete:
+      tags:
+      - user
+      summary: Delete user
+      description: |-
+        All permissions of the user are permanently removed and need to be re-added
+        if the user is re-registered.
+      operationId: delete_user
+      responses:
+        '200':
+          description: User deleted successfully
   /management/v1/warehouse:
     get:
       tags:
-      - management
+      - warehouse
       summary: List all warehouses in a project
       description: |-
         By default, this endpoint does not return deactivated warehouses.
         To include deactivated warehouses, set the `include_deactivated` query parameter to `true`.
       operationId: list_warehouses
       parameters:
-      - name: warehouse-status
+      - name: warehouseStatus
         in: query
         description: |-
           Optional filter to return only warehouses
@@ -126,7 +251,7 @@ paths:
           items:
             $ref: '#/components/schemas/WarehouseStatus'
           nullable: true
-      - name: project-id
+      - name: projectId
         in: query
         description: |-
           The project ID to list warehouses for.
@@ -147,7 +272,7 @@ paths:
                   $ref: '#/components/schemas/ListWarehousesResponse'
     post:
       tags:
-      - management
+      - warehouse
       summary: Create a new warehouse.
       description: |-
         Create a new warehouse in the given project. The project
@@ -172,7 +297,7 @@ paths:
   /management/v1/warehouse/{warehouse_id}:
     get:
       tags:
-      - management
+      - warehouse
       summary: Get a warehouse by ID
       operationId: get_warehouse
       parameters:
@@ -193,7 +318,7 @@ paths:
                   $ref: '#/components/schemas/GetWarehouseResponse'
     delete:
       tags:
-      - management
+      - warehouse
       summary: Delete a warehouse by ID
       operationId: delete_warehouse
       parameters:
@@ -209,7 +334,7 @@ paths:
   /management/v1/warehouse/{warehouse_id}/activate:
     post:
       tags:
-      - management
+      - warehouse
       summary: Activate a warehouse
       operationId: activate_warehouse
       parameters:
@@ -225,7 +350,7 @@ paths:
   /management/v1/warehouse/{warehouse_id}/deactivate:
     post:
       tags:
-      - management
+      - warehouse
       summary: Deactivate a warehouse
       operationId: deactivate_warehouse
       parameters:
@@ -241,11 +366,25 @@ paths:
   /management/v1/warehouse/{warehouse_id}/deleted_tabulars:
     get:
       tags:
-      - management
+      - warehouse
       summary: List soft-deleted tabulars
       description: List all soft-deleted tabulars in the warehouse that are visible to you.
       operationId: list_deleted_tabulars
       parameters:
+      - name: pageToken
+        in: query
+        description: Next page token
+        required: false
+        schema:
+          $ref: '#/components/schemas/PageToken'
+      - name: pageSize
+        in: query
+        description: Signals an upper bound of the number of results that a client will receive.
+        required: false
+        schema:
+          type: integer
+          format: int32
+          nullable: true
       - name: warehouse_id
         in: path
         required: true
@@ -264,7 +403,7 @@ paths:
   /management/v1/warehouse/{warehouse_id}/rename:
     post:
       tags:
-      - management
+      - warehouse
       summary: Rename a warehouse
       operationId: rename_warehouse
       parameters:
@@ -286,7 +425,7 @@ paths:
   /management/v1/warehouse/{warehouse_id}/storage:
     post:
       tags:
-      - management
+      - warehouse
       summary: Update the storage profile of a warehouse including its storage credential.
       operationId: update_storage_profile
       parameters:
@@ -308,7 +447,7 @@ paths:
   /management/v1/warehouse/{warehouse_id}/storage-credential:
     post:
       tags:
-      - management
+      - warehouse
       summary: Update the storage credential of a warehouse. The storage profile is not modified.
       description: This can be used to update credentials before expiration.
       operationId: update_storage_credential
@@ -641,17 +780,43 @@ components:
           items:
             $ref: '#/components/schemas/GetProjectResponse'
           description: List of projects
+    ListUsersQuery:
+      type: object
+      properties:
+        name:
+          type: string
+          description: Search for a specific username
+          nullable: true
+        pageSize:
+          type: integer
+          format: int32
+          description: Signals an upper bound of the number of results that a client will receive.
+          nullable: true
+        pageToken:
+          $ref: '#/components/schemas/PageToken'
+    ListUsersResponse:
+      type: object
+      required:
+      - users
+      properties:
+        next_page_token:
+          type: string
+          nullable: true
+        users:
+          type: array
+          items:
+            $ref: '#/components/schemas/User'
     ListWarehousesRequest:
       type: object
       properties:
-        project-id:
+        projectId:
           type: string
           format: uuid
           description: |-
             The project ID to list warehouses for.
             Setting a warehouse is required.
           nullable: true
-        warehouse-status:
+        warehouseStatus:
           type: array
           items:
             $ref: '#/components/schemas/WarehouseStatus'
@@ -670,6 +835,14 @@ components:
           items:
             $ref: '#/components/schemas/GetWarehouseResponse'
           description: List of warehouses in the project.
+    RenameProjectRequest:
+      type: object
+      required:
+      - new-name
+      properties:
+        new-name:
+          type: string
+          description: New name for the project.
     RenameWarehouseRequest:
       type: object
       required:
@@ -747,6 +920,39 @@ components:
           type: string
           description: Optional role ARN to assume for sts vended-credentials
           nullable: true
+    SearchUser:
+      type: object
+      required:
+      - name
+      - id
+      properties:
+        id:
+          type: string
+          description: ID of the user
+        name:
+          type: string
+          description: Name of the user
+    SearchUserRequest:
+      type: object
+      required:
+      - search
+      properties:
+        search:
+          type: string
+          description: |-
+            Search string for fuzzy search.
+            Length is truncated to 64 characters.
+    SearchUserResponse:
+      type: object
+      description: Search result for users
+      required:
+      - users
+      properties:
+        users:
+          type: array
+          items:
+            $ref: '#/components/schemas/SearchUser'
+          description: List of users matching the search criteria
     StorageCredential:
       oneOf:
       - allOf:
@@ -846,6 +1052,16 @@ components:
       enum:
       - table
       - view
+    UpdateUserRequest:
+      type: object
+      required:
+      - name
+      properties:
+        email:
+          type: string
+          nullable: true
+        name:
+          type: string
     UpdateWarehouseCredentialRequest:
       type: object
       properties:
@@ -864,6 +1080,43 @@ components:
           nullable: true
         storage-profile:
           $ref: '#/components/schemas/StorageProfile'
+    User:
+      type: object
+      description: User of the catalog
+      required:
+      - name
+      - id
+      - last_updated_with
+      - created_at
+      properties:
+        created_at:
+          type: string
+          format: date-time
+          description: Timestamp when the user was created
+        email:
+          type: string
+          description: Email of the user
+          nullable: true
+        id:
+          type: string
+          description: The user's ID
+        last_updated_with:
+          $ref: '#/components/schemas/UserLastUpdatedWith'
+        name:
+          type: string
+          description: Name of the user
+        updated_at:
+          type: string
+          format: date-time
+          description: Timestamp when the user was last updated
+          nullable: true
+    UserLastUpdatedWith:
+      type: string
+      description: How the user was last updated
+      enum:
+      - update-from-token
+      - config-call-creation
+      - update-endpoint
     WarehouseStatus:
       type: string
       description: Status of a warehouse
@@ -871,6 +1124,10 @@ components:
       - active
       - inactive
 tags:
-- name: management
-  description: Warehouse management operations
+- name: project
+  description: Manage Projects
+- name: warehouse
+  description: Manage Warehouses
+- name: user
+  description: Manage Users
 
